--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename= 'css/style.css') }}">
     <title>Minesweeper</title>
-    <style>
-        div {
-            height: 500px;
-            width: 500px;
-            background-color: red;
-        }
-    </style>
 </head>
 <body>
-<h1>Minesweeper</h1>
-<div id="main-div">
-    <h1>div</h1>
+<div>
+    <h1 id="page_title">Minesweeper</h1>
+</div>
+<div>
+    <h1>div div div</h1>
 </div>
 </body>
 </html>
