--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename= 'css/style.css') }}">
+    <meta charset="utf-8">
+    <!-- meta viewport tag enables touch zooming and proper rendering on mobile devices-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Minesweeper</title>
+    <!-- Bootstrap CSS file -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <!-- Icons and font styling CSS file -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div>
-    <h1 id="page_title">Minesweeper</h1>
-</div>
-<div>
-    <h1>div div div</h1>
-</div>
+    <div class="container">
+        <h1 class="text-center ">Minesweeper</h1>
+    </div>
+    <hr>
+    <div class="container-fluid"> <!-- Acts as the wrapper for the page content-->
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 </html>
