--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!-- meta viewport tag enables touch zooming and proper rendering on mobile devices-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Minesweeper</title>
-    <!-- Bootstrap CSS file -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <!-- Icons and font styling CSS file -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="text-center ">Minesweeper</h1>
-    </div>
-    <hr>
-    <div class="container-fluid"> <!-- Acts as the wrapper for the page content-->
+    {% block content %}
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+          <a href="#" class="navbar-brand text-light">Minesweeper</a>
+          <button type="button" class="navbar-toggler fg-light" data-toggle="collapse" data-target="#navbarCollapse">
+              <span class="navbar-toggler-icon"></span>
+          </button>
 
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+              <div class="navbar-nav ml-auto">
+                  <a href="#" class="nav-item nav-link text-success">New Game</a>
+                  <a href="#" class="nav-item nav-link text-warning">Top Scores</a>
+                  <a href="#" class="nav-item nav-link text-danger">Quit</a>
+              </div>
+          </div>
+      </nav>
+    <!-- Content -->
+    <div class="container">
+        <!-- Status Bar -->
+        <nav class="nav nav-pills nav-fill mt-3 bg-success">
+            <div class="nav-item">
+                <i class="fa fa-flag fa-3x text-danger"></i>
+                <h2 class="d-inline pl-4">30</h2>
+            </div>
+            <div class="nav-item">
+                <i class="fa fa-clock-o fa-3x text-warning"></i>
+                <h2 class="d-inline pl-3">0:59</h2>
+            </div>
+            <div class="nav-item dropdown">
+              <a href="#" class="nav-link dropdown-toggle text-dark h3" data-toggle="dropdown">Medium</a>
+              <div class="dropdown-menu">
+                  <form method="post">
+                      <button class="btn dropdown-item" value="easy">Easy</button>
+                      <button class="btn dropdown-item" value="medium">Medium</button>
+                      <button class="btn dropdown-item" value="hard">Hard</button>
+                  </form>
+              </div>
+          </div>
+        </nav>
+        <!-- Game Display -->
+        <div class="container-fluid border mt-3">
+                    {% for row in rows %}
+                        <div class="row flex-nowrap">
+                        {% for column in columns %}
+                            <button class="btn btn-outline-success d-inline">{{ row }} {{ column }}</button>
+                        {%  endfor %}
+                        </div>
+                    {%  endfor %}
+                {% endblock %}
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
