--- a/templates/index.html
+++ b/templates/index.html
@@ -37,28 +37,28 @@
                 <h2 class="d-inline pl-3">0:59</h2>
             </div>
             <div class="nav-item dropdown">
-              <a href="#" class="nav-link dropdown-toggle text-dark h3" data-toggle="dropdown">Medium</a>
+              <a href="#" class="nav-link dropdown-toggle text-dark h3 text-capitalize" data-toggle="dropdown">{{ difficulty }}</a>
               <div class="dropdown-menu">
                   <form method="post">
-                      <button class="btn dropdown-item" value="easy">Easy</button>
-                      <button class="btn dropdown-item" value="medium">Medium</button>
-                      <button class="btn dropdown-item" value="hard">Hard</button>
+                      <button class="btn dropdown-item" type="submit" name="difficulty" value="easy">Easy</button>
+                      <button class="btn dropdown-item" type="submit" name="difficulty" value="medium">Medium</button>
+                      <button class="btn dropdown-item" type="submit" name="difficulty" value="hard">Hard</button>
                   </form>
               </div>
           </div>
         </nav>
         <!-- Game Display -->
         <div class="container-fluid border mt-3">
-                    {% for row in rows %}
-                        <div class="row flex-nowrap">
-                        {% for column in columns %}
-                            <button class="btn btn-outline-success d-inline">{{ row }} {{ column }}</button>
-                        {%  endfor %}
-                        </div>
-                    {%  endfor %}
-                {% endblock %}
+            {% for row in rows %}
+                <div class="row flex-nowrap">
+                {% for column in columns %}
+                    <button class="btn btn-outline-success d-inline">{{ row }} {{ column }}</button>
+                {%  endfor %}
+                </div>
+            {%  endfor %}
         </div>
     </div>
+    {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
