--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,11 @@
                 {% for row in rows %}
                 <div class="row flex-nowrap">
                 {% for column in columns %}
-                    <button class="btn btn-outline-success d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                    {% if [row, column] in mine_locations %}
+                        <button class="btn btn-outline-danger d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                    {% else %}
+                        <button class="btn btn-outline-success d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                    {% endif %}
                 {%  endfor %}
                 </div>
             {%  endfor %}
