--- a/templates/index.html
+++ b/templates/index.html
@@ -53,10 +53,16 @@
                 {% for row in rows %}
                     <div class="row flex-nowrap">
                     {% for column in columns %}
-                        {% if [row, column] in mine_locations %}
-                            <button class="btn btn-outline-danger d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                        {% if [row, column] in revealed_tiles %}
+                            {% if [row, column] in mine_locations %}
+                                <button class="btn btn-danger d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                            {% elif [row, column] in ind_locations %}
+                                <button class="btn btn-warning d-inline" name="tile" value="{{ row }} {{ column }}">{{ ind_number[ind_locations.index([row,column])] }}</button>
+                            {% else %}
+                                <button class="btn btn-success d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                            {% endif %}
                         {% else %}
-                            <button class="btn btn-outline-success d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
+                            <button class="btn btn-success d-inline" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
                         {% endif %}
                     {%  endfor %}
                     </div>
