--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,11 @@
                 {% for row in rows %}
                     <div class="row flex-nowrap">
                     {% for column in columns %}
-                        {% if [row, column] in revealed_tiles %}
+                        {% if revealed_tiles|length == 0 %}
+                            <button class="btn btn-success d-inline" name="start_game" value="{{ row }} {{ column }}">that</button>
+                        {% elif [row, column] in revealed_tiles %}
                             {% if [row, column] in ind_locations %}
-                                <button class="btn btn-warning d-inline" name="tile" value="{{ row }} {{ column }}">{{ ind_number[ind_locations.index([row,column])] }}</button>
+                                <button class="btn btn-warning d-inline disabled" name="tile" value="{{ row }} {{ column }}">{{ ind_number[ind_locations.index([row,column])] }}</button>
                             {% else %}
                                 <button class="btn btn-primary d-inline disabled" name="tile" value="{{ row }} {{ column }}">{{ row }} {{ column }}</button>
                             {% endif %}
@@ -70,12 +72,16 @@
             </form>
         </div>
     </div>
+
     <a href="#game-over-modal" class="btn btn-lg btn-primary" data-toggle="modal">Launch Demo Modal</a>
+
     <!-- Game over Modal -->
     <div id="game-over-modal" class="modal" tabindex="-1">
-        <div class="modal-content">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Game Over</h5>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
             <div class="modal-body">
                 <p>Try again?</p>
@@ -85,7 +91,9 @@
                 <button type="button" class="btn btn-primary">Yes</button>
             </div>
         </div>
+        </div>
     </div>
+
     {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
