--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         <nav class="nav nav-pills nav-fill mt-3 bg-success">
             <div class="nav-item">
                 <i class="fa fa-flag fa-3x text-danger"></i>
-                <h2 class="d-inline pl-4">{{ num_of_flags }}</h2>
+                <h2 id="num_of_flags_remaining"class="d-inline pl-4">{{ num_of_flags }}</h2>
             </div>
             <div class="nav-item">
                 <i class="fa fa-clock-o fa-3x text-warning"></i>
@@ -61,7 +61,7 @@
                     <div class="row flex-nowrap d-flex justify-content-center">
                     {% for column in columns %}
                         {% if revealed_tiles|length == 0 %}
-                            <button class="btn btn-success border square-button d-inline" onmousedown="WhichButton(event)" name="start_game" value="{{ row }} {{ column }}"></button>
+                            <button class="btn btn-success border square-button d-inline" name="start_game" value="{{ row }} {{ column }}"></button>
                         {% elif [row, column] in revealed_tiles %}
                             {% if [row, column] in ind_locations %}
                                 <button class="btn d-inline border square-button font-weight-bold disabled" style="background-color: #C4A484; {{ indicator_style[ind_number[ind_locations.index([row,column])]] }}" name="tile" value="{{ row }} {{ column }}">{{ ind_number[ind_locations.index([row,column])] }}</button>
@@ -69,7 +69,7 @@
                                 <button class="btn d-inline square-button border disabled" style="background-color: #C4A484;" name="tile" value="{{ row }} {{ column }}"></button>
                             {% endif %}
                         {% elif [row, column] in mine_locations %}
-                            <button class="btn btn-danger square-button border d-inline" name="tile" value="{{ row }} {{ column }}">X</button>
+                            <button class="btn btn-danger square-button border d-inline" onmousedown="WhichButton(event,this.name,this.value)" name="tile" value="{{ row }} {{ column }}">X</button>
                         {% else %}
                             <button class="btn btn-success square-button border d-inline" name="tile" value="{{ row }} {{ column }}"></button>
                         {% endif %}
@@ -102,10 +102,17 @@
         </div>
         </div>
     </div>
+
     <!-- Right-Click for tiles -->
     <script>
-    function WhichButton(event) {
-      alert("You pressed button: " + event.button)
+    function WhichButton(event, button_name, button_value) {
+      if (event.button == 2) {
+        alert("You pressed button: " + event.button);
+        alert("You pressed button: " + button_name);
+        alert("You pressed button: " + button_value);
+        document.getElementById("num_of_flags_remaining").innerHTML = "ten";
+      }
+
     }
     </script>
     <script type="text/javascript">
