--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                                 <button class="btn d-inline square-button border disabled" style="background-color: #C4A484;" name="tile" value="{{ row }} {{ column }}"></button>
                             {% endif %}
                         {% elif [row, column] in mine_locations %}
-                            <button class="btn btn-danger square-button border d-inline" onmousedown="WhichButton(event,this.name,this.value)" name="tile" value="{{ row }} {{ column }}">X</button>
+                            <button class="btn btn-danger square-button border d-inline" onmousedown="WhichButton(event,this.name,this.value,this.id)" id="{{ row }} {{ column }}" name="tile" value="{{ row }} {{ column }}">X</i></button>
                         {% else %}
                             <button class="btn btn-success square-button border d-inline" name="tile" value="{{ row }} {{ column }}"></button>
                         {% endif %}
@@ -104,13 +104,27 @@
     </div>
 
     <!-- Right-Click for tiles -->
-    <script>
-    function WhichButton(event, button_name, button_value) {
-      if (event.button == 2) {
-        alert("You pressed button: " + event.button);
-        alert("You pressed button: " + button_name);
-        alert("You pressed button: " + button_value);
-        document.getElementById("num_of_flags_remaining").innerHTML = "ten";
+    <script type="text/javascript">
+    function WhichButton(event, button_name, button_value, button_id) {
+
+        if (event.button == 2) {
+            //alert("You pressed button event: " + event.button);
+            //alert("You pressed button name: " + button_name);
+            //alert("You pressed button value: " + button_value);
+            //alert("You pressed button id: " + button_id);
+
+            var xhttp = new XMLHttpRequest();
+            xhttp.open("POST", "http://127.0.0.1:5000/", true);
+            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+            xhttp.send("tile="+button_value);
+
+            var flags = document.getElementById("num_of_flags_remaining").innerHTML;
+            document.getElementById("num_of_flags_remaining").innerHTML = parseInt(flags) - 1;
+
+
+            // Wait till entire page is loaded:
+            //document.getElementById("button_id").innerHTML = "<i class="fa fa-flag fa-1x text-dark"></i>";
+
       }
 
     }
@@ -134,11 +148,13 @@
     <script>
         function loadDoc() {
           var xhttp = new XMLHttpRequest();
-          xhttp.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-              document.getElementById("demo").innerHTML = this.responseText;
-            }
-          };
+
+          //xhttp.onreadystatechange = function() {
+          //  if (this.readyState == 4 && this.status == 200) {
+          //    document.getElementById("demo").innerHTML = this.responseText;
+          //  }
+          //};
+
           xhttp.open("POST", "http://127.0.0.1:5000/", true);
           xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
           xhttp.send("tile=1 1");
@@ -146,6 +162,7 @@
     </script>
 
     {% endblock %}
+    <!--<script src="myscripts.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
