--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,7 @@
                 {% for row in rows %}
                     <div class="row flex-nowrap d-flex justify-content-center">
                     {% for column in columns %}
+                        <!-- Remove IF statements and just create grid with ids -->
                         {% if revealed_tiles|length == 0 %}
                             <button class="btn btn-success border square-button d-inline" name="start_game" value="{{ row }} {{ column }}"></button>
                         {% elif [row, column] in revealed_tiles %}
@@ -105,64 +106,43 @@
 
     <!-- Right-Click for tiles -->
     <script type="text/javascript">
-    function WhichButton(event, button_name, button_value, button_id) {
-
-        if (event.button == 2) {
-            //alert("You pressed button event: " + event.button);
-            //alert("You pressed button name: " + button_name);
-            //alert("You pressed button value: " + button_value);
-            //alert("You pressed button id: " + button_id);
-
-            var xhttp = new XMLHttpRequest();
-            xhttp.open("POST", "http://127.0.0.1:5000/", true);
-            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-            xhttp.send("tile="+button_value);
-
-            var flags = document.getElementById("num_of_flags_remaining").innerHTML;
-            document.getElementById("num_of_flags_remaining").innerHTML = parseInt(flags) - 1;
-
-
-            // Wait till entire page is loaded:
-            //document.getElementById("button_id").innerHTML = "<i class="fa fa-flag fa-1x text-dark"></i>";
-
-      }
-
-    }
-    </script>
-    <script type="text/javascript">
         document.oncontextmenu = rightClick;
 
         function rightClick(clickEvent) {
             clickEvent.preventDefault();
-
-            // return false;
         }
-    </script>
+        function WhichButton(event, button_name, button_value, button_id) {
+            if (event.button == 0) {
+                alert("You pressed button event: " + event.button);
+            }
+            else if (event.button == 2) {
+                alert("You pressed button event: " + event.button);
+                //alert("You pressed button name: " + button_name);
+                //alert("You pressed button value: " + button_value);
+                //alert("You pressed button id: " + button_id);
 
-    <!-- Send POST request VIA AJAX -->
-    <h1 id="">The XMLHttpRequest Object</h1>
+                var xhttp = new XMLHttpRequest();
 
-    <button type="button" onclick="loadDoc()">Request data</button>
+                //xhttp.onreadystatechange = function() {
+                //  if (this.readyState == 4 && this.status == 200) {
+                //      document.getElementById("demo").innerHTML = this.responseText;
+                //  }
+                //};
 
-    <p id="demo"></p>
-    <script>
-        function loadDoc() {
-          var xhttp = new XMLHttpRequest();
+                xhttp.open("POST", "http://127.0.0.1:5000/", true);
+                xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                xhttp.send("tile="+button_value);
 
-          //xhttp.onreadystatechange = function() {
-          //  if (this.readyState == 4 && this.status == 200) {
-          //    document.getElementById("demo").innerHTML = this.responseText;
-          //  }
-          //};
+                var flags_remaining = document.getElementById("num_of_flags_remaining").innerHTML;
+                document.getElementById("num_of_flags_remaining").innerHTML = parseInt(flags_remaining) - 1;
+                var flag_icon = "<i class='fa fa-flag fa-1x text-dark'></i>"
+                document.getElementById(button_id).innerHTML = flag_icon;
+            }
 
-          xhttp.open("POST", "http://127.0.0.1:5000/", true);
-          xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-          xhttp.send("tile=1 1");
         }
     </script>
 
     {% endblock %}
-    <!--<script src="myscripts.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
