--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,7 @@
     <title>Minesweeper</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-        .square-button {
-            width: 40px !important;
-            height: 40px !important;
-            border-radius: 0 !important;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     {% block content %}
