--- a/templates/index.html
+++ b/templates/index.html
@@ -98,45 +98,9 @@
         </div>
     </div>
 
-    <!-- Right-Click for tiles -->
-    <script type="text/javascript">
-        document.oncontextmenu = rightClick;
-
-        function rightClick(clickEvent) {
-            clickEvent.preventDefault();
-        }
-        function WhichButton(event, button_name, button_value, button_id) {
-            if (event.button == 0) {
-                alert("You pressed button event: " + event.button);
-            }
-            else if (event.button == 2) {
-                alert("You pressed button event: " + event.button);
-                //alert("You pressed button name: " + button_name);
-                //alert("You pressed button value: " + button_value);
-                //alert("You pressed button id: " + button_id);
-
-                var xhttp = new XMLHttpRequest();
-
-                //xhttp.onreadystatechange = function() {
-                //  if (this.readyState == 4 && this.status == 200) {
-                //      document.getElementById("demo").innerHTML = this.responseText;
-                //  }
-                //};
-
-                xhttp.open("POST", "http://127.0.0.1:5000/", true);
-                xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                xhttp.send("tile="+button_value);
-
-                var flags_remaining = document.getElementById("num_of_flags_remaining").innerHTML;
-                document.getElementById("num_of_flags_remaining").innerHTML = parseInt(flags_remaining) - 1;
-                var flag_icon = "<i class='fa fa-flag fa-1x text-dark'></i>"
-                document.getElementById(button_id).innerHTML = flag_icon;
-            }
-
-        }
-    </script>
-
+    <p id="test_paragraph">this should change</p>
     {% endblock %}
+    <script src="/static/js/app.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
