--- a/templates/index.html
+++ b/templates/index.html
@@ -61,10 +61,10 @@
                             {% if [row, column] in ind_locations %}
                                 <button class="btn d-inline border square-button font-weight-bold disabled" style="background-color: #C4A484; {{ indicator_style[ind_number[ind_locations.index([row,column])]] }}" name="tile" value="{{ row }} {{ column }}">{{ ind_number[ind_locations.index([row,column])] }}</button>
                             {% else %}
-                                <button class="btn d-inline square-button border disabled" style="background-color: #C4A484;" name="tile" value="{{ row }},{{ column }}"></button>
+                                <button class="btn d-inline square-button border disabled" style="background-color: #C4A484;" name="tile" value="{{ row }} {{ column }}"></button>
                             {% endif %}
                         {% elif [row, column] in mine_locations %}
-                            <button class="btn btn-danger square-button border d-inline" onmousedown="WhichButton(event,this.name,this.value,this.id)" id="{{ row }} {{ column }}" name="tile" value="{{ row }} {{ column }}">X</i></button>
+                            <button class="btn btn-danger square-button border d-inline" onmousedown="WhichButton(event,this.name,this.value,this.id)" id="{{ row }},{{ column }}" name="tile" value="{{ row }} {{ column }}">X</i></button>
                         {% else %}
                             <button class="btn btn-success square-button border d-inline" name="tile" value="{{ row }} {{ column }}"></button>
                         {% endif %}
