--- a/templates/index.html
+++ b/templates/index.html
@@ -50,15 +50,19 @@
         </nav>
         <!-- Game Display -->
         <div class="container border mt-3 mx-0">
-            <form method="post">
+            {% if game_started == false %}<form method="post">{% endif %}
                 {% for row in rows %}
                     <div class="row flex-nowrap d-flex justify-content-center">
                     {% for column in columns %}
+                        {% if game_started == false %}
+                        <button class="btn btn-warning square-button border d-inline" name="start_game" value="{{ row }} {{ column }}"> </button>
+                        {% else %}
                         <button class="btn btn-success square-button border d-inline" onmousedown="WhichButton(event,this.name,this.value,this.id)" id="{{ row }},{{ column }}" name="tile" value="{{ row }} {{ column }}"> </button>
+                        {% endif %}
                     {%  endfor %}
                     </div>
                 {%  endfor %}
-            </form>
+            {% if game_started == false %}</form>{% endif %}
         </div>
     </div>
 
@@ -94,31 +98,70 @@
         function rightClick(clickEvent) {
             clickEvent.preventDefault();
         }
+
+        var indicator_style = {
+            1: "#0000FF",  // Blue
+            2: "#5cb85c",  // Green
+            3: "#ff0000",  // Red
+            4: "#800080",  // Purple
+            5: "#800000",  // Maroon
+            6: "#30D5C8",  // Turquoise
+            7: "#000000",  // Black
+            8: "#808080",  // Gray
+        }
+
         function WhichButton(event, button_name, button_value, button_id) {
             if (event.button == 0) {
                 alert("You pressed button event: " + event.button);
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
-                  if (this.readyState == 4 && this.status == 200) {
-                      var item = this.responseText;
-                      var item_parsed = JSON.parse(item);
-                      var item_key = Object.keys(item_parsed);
+                    if (this.readyState == 4 && this.status == 200) {
+                        var item = this.responseText;
+                        var item_parsed = JSON.parse(item);
+                        var item_key = Object.keys(item_parsed);
 
-                      var item_value = item_parsed[item_key[0]];
+                        var item_value = item_parsed[item_key[0]];
 
-                      for (var key in item_parsed) {
-                        if (key == "mine_locations") {
-                            document.getElementById("test_paragraph").innerHTML = item_key[0];
-                            document.getElementById("test_paragraph2").innerHTML = "values: ";
-
-                            for (let i = 0; i < item_value.length; i++) {
-                                document.getElementById("test_paragraph2").innerHTML += item_value[i];
-                                document.getElementById(item_value[i]).className = "btn btn-warning square-button border d-inline";
-                            }
-
+                        if ("revealed_tiles" in item_parsed) {
+                            var value = item_parsed["revealed_tiles"];
+                            for (let i=0; i < value.length; i++) {
+                                    //document.getElementById("test_paragraph2").innerHTML += value[i];
+                                    document.getElementById(value[i]).className = "btn square-button border d-inline";
+                                    document.getElementById(value[i]).style.backgroundColor = "#C4A484";
+                                }
                         }
-                      }
-                  }
+                        if ("ind_location" in item_parsed) {
+                            var ind_locations = item_parsed["ind_location"];
+                            if ("ind_number" in item_parsed) {
+                                var ind_number = item_parsed["ind_number"];
+                                for (let i = 0; i < ind_number.length; i++) {
+                                    document.getElementById(ind_locations[i]).innerHTML = ind_number[i];
+                                    document.getElementById(ind_locations[i]).style.color = indicator_style[ind_number[i]];
+                                    document.getElementById(value[i]).className += " font-weight-bold";
+                                }
+                            }
+                        }
+                        /*for (var key in item_parsed) {
+                            if (key == "mine_locations") {
+                                document.getElementById("test_paragraph").innerHTML = item_key[0];
+                                document.getElementById("test_paragraph2").innerHTML = "values: ";
+
+                                for (let i = 0; i < item_value.length; i++) {
+                                    document.getElementById("test_paragraph2").innerHTML += item_value[i];
+                                    document.getElementById(item_value[i]).className = "btn btn-warning square-button border d-inline";
+                                }
+                            }
+                            if (key == "revealed_tiles") {
+                                var value = item_parsed[key];
+
+                                for (let i=0; i < value.length; i++) {
+                                    //document.getElementById("test_paragraph2").innerHTML += value[i];
+                                    document.getElementById(value[i]).className = "btn square-button border d-inline";
+                                    document.getElementById(value[i]).style.backgroundColor = "#C4A484";
+                                }
+                            }
+                        }*/
+                    }
                 };
                 document.getElementById("test_paragraph3").innerHTML = button_name;
 
@@ -126,7 +169,8 @@
                 xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
                 var test_key = "test_key";
                 var test_value = "test_value";
-                xhttp.send(test_key + "=" + test_value);
+                //xhttp.send(test_key + "=" + test_value);
+                xhttp.send(button_name + "=" + button_value);
             }
             else if (event.button == 2) {
                 alert("You pressed button event: " + event.button);
