--- a/templates/index.html
+++ b/templates/index.html
@@ -65,9 +65,6 @@
             {% if game_started == false %}</form>{% endif %}
         </div>
     </div>
-
-    <a href="#game-over-modal" class="btn btn-lg btn-primary" data-toggle="modal">Launch Demo Modal</a>
-
     <!-- Game over Modal -->
     <div id="game-over-modal" class="modal" tabindex="-1">
         <div class="modal-dialog modal-sm">
@@ -88,10 +85,6 @@
         </div>
         </div>
     </div>
-
-    <p id="test_paragraph">this should change</p>
-    <p id="test_paragraph2">this should change</p>
-    <p id="test_paragraph3">this should change</p>
     <script>
         document.oncontextmenu = rightClick;
 
@@ -125,8 +118,7 @@
                         if ("revealed_tiles" in item_parsed) {
                             var value = item_parsed["revealed_tiles"];
                             for (let i=0; i < value.length; i++) {
-                                    //document.getElementById("test_paragraph2").innerHTML += value[i];
-                                    document.getElementById(value[i]).className = "btn square-button border d-inline";
+                                    document.getElementById(value[i]).className = "btn square-button border d-inline font-weight-bold";
                                     document.getElementById(value[i]).style.backgroundColor = "#C4A484";
                                 }
                         }
@@ -137,39 +129,29 @@
                                 for (let i = 0; i < ind_number.length; i++) {
                                     document.getElementById(ind_locations[i]).innerHTML = ind_number[i];
                                     document.getElementById(ind_locations[i]).style.color = indicator_style[ind_number[i]];
-                                    document.getElementById(value[i]).className += " font-weight-bold";
                                 }
                             }
                         }
-                        /*for (var key in item_parsed) {
-                            if (key == "mine_locations") {
-                                document.getElementById("test_paragraph").innerHTML = item_key[0];
-                                document.getElementById("test_paragraph2").innerHTML = "values: ";
-
-                                for (let i = 0; i < item_value.length; i++) {
-                                    document.getElementById("test_paragraph2").innerHTML += item_value[i];
-                                    document.getElementById(item_value[i]).className = "btn btn-warning square-button border d-inline";
+                        if ("game_over" in item_parsed) {
+                            if ("mine_locations" in item_parsed) {
+                                var mine_locations = item_parsed["mine_locations"];
+                                for (let i = 0; i < mine_locations.length; i++) {
+                                    document.getElementById(mine_locations[i]).className = "btn square-button border d-inline bg-danger";
                                 }
                             }
-                            if (key == "revealed_tiles") {
-                                var value = item_parsed[key];
-
-                                for (let i=0; i < value.length; i++) {
-                                    //document.getElementById("test_paragraph2").innerHTML += value[i];
-                                    document.getElementById(value[i]).className = "btn square-button border d-inline";
-                                    document.getElementById(value[i]).style.backgroundColor = "#C4A484";
-                                }
+                            var tile_nodes = document.getElementsByName("tile");
+                            var tile_array = Array.prototype.slice.call(tile_nodes);
+                            for (let i = 0; i < tile_array.length; i++) {
+                                tile_array[i].name = "game_over";
                             }
-                        }*/
+                            $('#game-over-modal').modal('show');
+                        }
                     }
                 };
-                document.getElementById("test_paragraph3").innerHTML = button_name;
-
                 xhttp.open("POST", "http://127.0.0.1:5000/", true);
                 xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
                 var test_key = "test_key";
                 var test_value = "test_value";
-                //xhttp.send(test_key + "=" + test_value);
                 xhttp.send(button_name + "=" + button_value);
             }
             else if (event.button == 2) {
@@ -188,19 +170,22 @@
 
                 xhttp.open("POST", "http://127.0.0.1:5000/", true);
                 xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                xhttp.send("tile="+button_value);
+                //xhttp.send("tile="+button_value);
 
 
                 var flags_remaining = document.getElementById("num_of_flags_remaining").innerHTML;
                 var flag_icon = "<i class='fa fa-flag fa-1x text-dark'></i>";
 
                 // Below if-statement does not work
-                if (document.getElementById(button_id).innerHTML == flag_icon) {
+                // https://stackoverflow.com/questions/54852176/remove-icon-on-click
+                if (document.getElementById(button_id).name == "flagged") {
+                    document.getElementById(button_id).name = "";
                     document.getElementById(button_id).innerHTML = "";
                     document.getElementById("num_of_flags_remaining").innerHTML = parseInt(flags_remaining) + 1;
                 }
                 else {
                     document.getElementById(button_id).innerHTML = flag_icon;
+                    document.getElementById(button_id).name = "flagged"
                     document.getElementById("num_of_flags_remaining").innerHTML = parseInt(flags_remaining) - 1;
                 }
                 document.getElementById(button_id).innerHTML = flag_icon;
